# SPDX-FileCopyrightText: 2021 SanderTheDragon <sanderthedragon@zoho.com>
#
# SPDX-License-Identifier: MIT

[metadata]
name = sanderthedragon-sphinxext
version = 1.0.0b1

author = SanderTheDragon
author_email = sanderthedragon@zoho.com

description = SanderTheDragon's Sphinx Extensions
long_description = file: README.rst
long_description_content_type = text/x-rst

url = https://gitlab.com/SanderTheDragon/sphinx-extensions
project_urls =
    Bug Tracker = https://gitlab.com/SanderTheDragon/sphinx-extensions/issues

license = MIT
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False

package_dir=
    = extensions
packages=find_namespace:
include_package_data = True

python_requires = >=3.8

[options.packages.find]
where = extensions

[options.package_data]
* = *.css, *.js
